✨ Update .gitignore and env.sample for Appwrite bucket configurations

--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,8 @@
 NEXT_PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 NEXT_PUBLIC_APPWRITE_PROJECT_ID=your_project_id
 
+NEXT_PUBLIC_BASE_URI=http://localhost:3000
+
 NEXT_PUBLIC_APPWRITE_DB_CORE_ID=core
 NEXT_PUBLIC_APPWRITE_DB_EXTENSIONS_ID=extensions
 
@@ -17,4 +19,7 @@ NEXT_PUBLIC_APPWRITE_COLLECTION_WEB3WALLETS=web3wallets
 NEXT_PUBLIC_APPWRITE_COLLECTION_INTEGRATIONS=integrations
 NEXT_PUBLIC_APPWRITE_COLLECTION_EXTENSIONSETTINGS=extensionsettings
 
-# Add storage buckets if/when needed
+NEXT_PUBLIC_APPWRITE_BUCKET_USER_AVATARS=user-avatars
+NEXT_PUBLIC_APPWRITE_BUCKET_CHAT_MEDIA=chat-media
+NEXT_PUBLIC_APPWRITE_BUCKET_BACKGROUNDS=backgrounds
+NEXT_PUBLIC_APPWRITE_BUCKET_EXTENSION_ASSETS=extension-assets
