--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "appwrite": "^18.1.1",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "rxdb": "^16.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
