🎉 Add SVG assets and styles for buttons, headers, and pages
- Added tutorials.svg and youtube.svg assets for visual elements.
- Created button.css for styling buttons with primary, secondary, and size variations.
- Developed header.css for styling the header layout and typography.
- Implemented page.css for overall page styling, including typography and layout for text elements.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "appwrite": "^18.1.1",
@@ -16,13 +18,21 @@
     "rxdb": "^16.15.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.0.17",
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/addon-onboarding": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.17",
+    "@storybook/nextjs": "^9.0.17",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "eslint-plugin-storybook": "^9.0.17",
+    "storybook": "^9.0.17",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
