--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@storybook/addon-docs": "^9.0.17",
     "@storybook/addon-onboarding": "^9.0.17",
     "@storybook/addon-vitest": "^9.0.17",
-    "@storybook/nextjs": "^9.0.17",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -34,6 +33,7 @@
     "eslint-plugin-storybook": "^9.0.17",
     "storybook": "^9.0.17",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@storybook/nextjs-vite": "^9.0.17"
   }
 }
