--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "storybook": "^9.0.17",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^9.0.17"
+    "@storybook/nextjs-vite": "^9.0.17",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.54.1",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
