--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "rxdb": "^16.15.0"
+    "rxdb": "^16.15.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
