--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-rnd": "^10.5.2",
     "rxdb": "^16.15.0",
     "zustand": "^5.0.6"
   },
