--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "appwrite": "^18.1.1",
+    "bip39": "^3.1.0",
     "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
