🚑 Refactor code structure for improved readability and maintainability

--- a/env.sample
+++ b/env.sample
@@ -23,3 +23,6 @@ NEXT_PUBLIC_APPWRITE_BUCKET_USER_AVATARS=user-avatars
 NEXT_PUBLIC_APPWRITE_BUCKET_CHAT_MEDIA=chat-media
 NEXT_PUBLIC_APPWRITE_BUCKET_BACKGROUNDS=backgrounds
 NEXT_PUBLIC_APPWRITE_BUCKET_EXTENSION_ASSETS=extension-assets
+
+# Civic Auth
+NEXT_PUBLIC_CIVIC_CLIENT_ID=your_civic_client_id_here
