🎉  feat: integrate Civic Auth for user authentication; update layout and middleware for Civic support

--- a/env.sample
+++ b/env.sample
@@ -24,5 +24,8 @@ NEXT_PUBLIC_APPWRITE_BUCKET_CHAT_MEDIA=chat-media
 NEXT_PUBLIC_APPWRITE_BUCKET_BACKGROUNDS=backgrounds
 NEXT_PUBLIC_APPWRITE_BUCKET_EXTENSION_ASSETS=extension-assets
 
+# integrations
+
 # Civic Auth
-NEXT_PUBLIC_CIVIC_CLIENT_ID=your_civic_client_id_here
+NEXT_PUBLIC_CIVIC_CLIENT_ID=
+NEXT_PUBLIC_INTEGRATION_CIVIC=true
