--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/ed25519": "^2.3.0",
+    "@noble/hashes": "^1.8.0",
     "appwrite": "^18.1.1",
     "bip39": "^3.1.0",
     "crypto-browserify": "^3.12.1",
