sysyematically fix custom auth issue

--- a/env.sample
+++ b/env.sample
@@ -24,6 +24,9 @@ NEXT_PUBLIC_APPWRITE_BUCKET_CHAT_MEDIA=chat-media
 NEXT_PUBLIC_APPWRITE_BUCKET_BACKGROUNDS=backgrounds
 NEXT_PUBLIC_APPWRITE_BUCKET_EXTENSION_ASSETS=extension-assets
 
+# Custom Auth Function (for Appwrite function environment)
+APPWRITE_FUNCTION_API_KEY=your_api_key_here
+
 # integrations
 
 # Civic Auth
